--- a/index.html
+++ b/index.html
@@ -11,11 +11,109 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- My CSS -->
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
 <body>
+    <header class="main-header text-white d-flex">
+        <div class="container-lg">
 
+        </div>
+    </header>
+
+    <main class="main-content">
+
+        <!-- Hero START -->
+        <section class="hero">
+            <div class="container-fluid">
+
+            </div>
+        </section>
+        <!-- Hero END -->
+
+        <!-- Portfolio START-->
+        <section class="portfolio py-5">
+            <div class="container-lg">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4">
+                    <div class="col">
+
+                    </div>
+                    <div class="col">
+
+                    </div>
+                    <div class="col">
+
+                    </div>
+                    <div class="col">
+
+                    </div>
+                    <div class="col">
+
+                    </div>
+                    <div class="col">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Portfolio END-->
+
+        <!-- About START-->
+        <section class="about text-white">
+            <div class="container-lg">
+                <div class="row row-cols-1 row-cols-md-2">
+                    <div class="col">
+
+                    </div>
+                    <div class="col">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- About END-->
+
+        <!-- Contact Me START-->
+        <section class="contact-me">
+            <div class="container-lg">
+                <div class="row">
+                    <div class="col">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Contact Me END-->
+
+        <!-- Footer START-->
+        <footer class="main-footer">
+            <div class="main-footer__info">
+                <div class="container-lg">
+                    <div class="row row-cols-1 row-cols-lg-3">
+                        <div class="col">
+                            <div></div>
+                        </div>
+                        <div class="col">
+                            <div></div>
+                        </div>
+                        <div class="col">
+                            <div></div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="main-footer__copy">
+                <div class="container-fluid">
+
+                </div>
+            </div>
+        </footer>
+        <!-- Footer END-->
+
+    </main>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
