--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <!-- About START-->
         <section class="about text-white">
-            <div class="container-lg bf-container-small">
+            <div class="container-fluid bf-container-small">
                 <div class="row row-cols-1 row-cols-md-2">
                     <div class="col">
 
@@ -77,7 +77,7 @@
 
         <!-- Contact Me START-->
         <section class="contact-me">
-            <div class="container-lg bf-container-small">
+            <div class="container-fluid bf-container-small">
                 <div class="row">
                     <div class="col">
 
