--- a/index.html
+++ b/index.html
@@ -17,10 +17,30 @@
 </head>
 
 <body>
-    <header class="main-header text-white d-flex">
-        <div class="container-lg">
-
-        </div>
+    <header class="main-header py-3 text-white">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container-lg">
+                <a class="navbar-brand bf-navbar-brand" href="#">START BOOTSTRAP</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav bf-navbar-nav ms-auto mb-2 mb-lg-0 text-uppercase">
+                        <li class="nav-item">
+                            <a class="nav-link bf-link-white" href="#">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link bf-link-white" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link bf-link-white" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <main class="main-content">
