--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/01de7d5bf8.js" crossorigin="anonymous"></script>
     <!-- My CSS -->
     <link rel="stylesheet" href="./css/style.css">
 
@@ -46,9 +48,16 @@
     <main class="main-content">
 
         <!-- Hero START -->
-        <section class="hero">
-            <div class="container-fluid">
-
+        <section class="hero py-6 text-white">
+            <div class="container-fluid text-center">
+                <img src="./img/avatar.svg" class="img-fluid pb-2 bf-hero-img" alt="avatar">
+                <h1 class="hero__title fw-bold text-uppercase">Start Bootstrap</h1>
+                <div class="star pt-2 pb-4 d-flex align-items-center justify-content-between mx-auto">
+                    <div class="star__line bg-white"></div>
+                    <i class="fas fa-star px-1"></i>
+                    <div class="star__line bg-white"></div>
+                </div>
+                <h4 class="hero__subtitle text-uppercase">Graphic Artist - Web Designer - Illustrator</h4>
             </div>
         </section>
         <!-- Hero END -->
