--- a/index.html
+++ b/index.html
@@ -64,25 +64,43 @@
 
         <!-- Portfolio START-->
         <section class="portfolio py-5">
+            <h2 class="portfolio__title text-center text-uppercase">Portfolio</h2>
+            <div class="star py-3 d-flex align-items-center justify-content-between mx-auto">
+                <div class="star__line bg-black"></div>
+                <i class="fas fa-star px-1"></i>
+                <div class="star__line bg-black"></div>
+            </div>
             <div class="container-lg">
                 <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4">
                     <div class="col">
-
+                        <div class="card rounded-4">
+                            <img src="./img/cabin.png" class="card-img rounded-4" alt="casa in legno">
+                        </div>
                     </div>
                     <div class="col">
-
+                        <div class="card rounded-4">
+                            <img src="./img/cake.png" class="card-img rounded-4" alt="casa in legno">
+                        </div>
                     </div>
                     <div class="col">
-
+                        <div class="card rounded-4">
+                            <img src="./img/circus.png" class="card-img rounded-4" alt="casa in legno">
+                        </div>
                     </div>
                     <div class="col">
-
+                        <div class="card rounded-4">
+                            <img src="./img/game.png" class="card-img rounded-4" alt="casa in legno">
+                        </div>
                     </div>
                     <div class="col">
-
+                        <div class="card rounded-4">
+                            <img src="./img/safe.png" class="card-img rounded-4" alt="casa in legno">
+                        </div>
                     </div>
                     <div class="col">
-
+                        <div class="card rounded-4">
+                            <img src="./img/submarine.png" class="card-img rounded-4" alt="casa in legno">
+                        </div>
                     </div>
                 </div>
             </div>
