--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <!-- Portfolio START-->
         <section class="portfolio py-6">
-            <h2 class="portfolio__title text-center text-uppercase">Portfolio</h2>
+            <h2 class="bf-fz-title text-center text-uppercase">Portfolio</h2>
             <div class="star py-3 d-flex align-items-center justify-content-between mx-auto">
                 <div class="star__line bg-black"></div>
                 <i class="fas fa-star px-1"></i>
@@ -108,16 +108,31 @@
         <!-- Portfolio END-->
 
         <!-- About START-->
-        <section class="about text-white">
-            <div class="container-fluid bf-container-small">
-                <div class="row row-cols-1 row-cols-md-2">
+        <section class="about py-6 text-white">
+            <div class="container-fluid text-center bf-container-small">
+                <h2 class="bf-fz-title text-uppercase">About</h2>
+                <div class="star pt-2 pb-4 d-flex align-items-center justify-content-between mx-auto">
+                    <div class="star__line bg-white"></div>
+                    <i class="fas fa-star px-1"></i>
+                    <div class="star__line bg-white"></div>
+                </div>
+                <div class="row row-cols-1 row-cols-lg-2 fs-5 mb-4 text-start">
                     <div class="col">
-
+                        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the
+                            complete source files including HTML, CSS, and JavaScript as well as option LESS stylesheets
+                            for easy customization.</p>
                     </div>
                     <div class="col">
-
+                        <p>Whether you're a student looking to showcase your work, a professionl looking to attract
+                            clients, or a graphic artist looking to share your projects, this template is the perfect
+                            starting point!</p>
                     </div>
                 </div>
+                <button type="button" class="btn btn-outline-light fs-5 align-self-center">
+                    <i class="fas fa-download"></i>
+                    Download
+                </button>
+
             </div>
         </section>
         <!-- About END-->
