--- a/index.html
+++ b/index.html
@@ -138,11 +138,43 @@
         <!-- About END-->
 
         <!-- Contact Me START-->
-        <section class="contact-me">
+        <section class="contact-me py-6">
             <div class="container-fluid bf-container-small">
+                <h2 class="bf-fz-title text-center text-uppercase">Contact Me</h2>
+                <div class="star pt-2 pb-4 d-flex align-items-center justify-content-between mx-auto">
+                    <div class="star__line bg-black"></div>
+                    <i class="fas fa-star px-1"></i>
+                    <div class="star__line bg-black"></div>
+                </div>
                 <div class="row">
-                    <div class="col">
-
+                    <div class="col fs-5">
+                        <form action="" method="post">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item d-flex align-items-baseline">
+                                    <label for="name" class="form-label me-2">Name</label>
+                                    <input type="text" name="name" class="form-control border-0" id="name"
+                                        placeholder="Name Surname">
+                                </li>
+                                <li class="list-group-item d-flex align-items-baseline">
+                                    <label for="email" class="form-label me-2">Email Address</label>
+                                    <input type="email" name="email" class="form-control border-0" id="email"
+                                        placeholder="example@example.com">
+                                </li>
+                                <li class="list-group-item d-flex align-items-baseline">
+                                    <label for="name" class="form-label me-2">Phone Number</label>
+                                    <input type="number" name="name" class="form-control border-0" id="name"
+                                        placeholder="0123456789">
+                                </li>
+                                <li class="list-group-item d-flex align-items-baseline border-bottom">
+                                    <label for="name" class="form-label me-2">Message</label>
+                                    <textarea class="form-control border-0" name="message" id="message"
+                                        rows="5"></textarea>
+                                </li>
+                                <li class="list-group-item pt-3">
+                                    <input type="submit" name="submit" class="btn text-white" value="Send">
+                                </li>
+                            </ul>
+                        </form>
                     </div>
                 </div>
             </div>
