--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="main-header py-3 text-white">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-lg">
-                <a class="navbar-brand bf-navbar-brand" href="#">START BOOTSTRAP</a>
+                <a class="navbar-brand fs-7" href="#">START BOOTSTRAP</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
                     <i class="fas fa-star px-1"></i>
                     <div class="star__line bg-white"></div>
                 </div>
-                <h4 class="hero__subtitle text-uppercase">Graphic Artist - Web Designer - Illustrator</h4>
+                <h4 class="fs-7 text-uppercase">Graphic Artist - Web Designer - Illustrator</h4>
             </div>
         </section>
         <!-- Hero END -->
@@ -182,26 +182,35 @@
         <!-- Contact Me END-->
 
         <!-- Footer START-->
-        <footer class="main-footer">
+        <footer class="main-footer text-white">
             <div class="main-footer__info">
                 <div class="container-lg">
-                    <div class="row row-cols-1 row-cols-lg-3">
-                        <div class="col">
-                            <div></div>
+                    <div class="row row-cols-1 row-cols-lg-3 g-4 py-6">
+                        <div class="col text-center">
+                            <h3 class="fs-7 text-uppercase">Location</h3>
+                            <p class="mb-0 fs-5">2215 John Daniel Drive Clark, MO 54243</p>
                         </div>
-                        <div class="col">
-                            <div></div>
+                        <div class="col text-center">
+                            <h3 class="fs-7 text-uppercase">Around the web</h3>
+                            <div class="socials d-flex justify-content-center g-3">
+                                <i class="fa fa-facebook mx-2 d-flex align-items-center justify-content-center"></i>
+                                <i class="fa fa-google-plus mx-2 d-flex align-items-center justify-content-center"></i>
+                                <i class="fa fa-twitter mx-2 d-flex align-items-center justify-content-center"></i>
+                                <i class="fa fa-linkedin mx-2 d-flex align-items-center justify-content-center"></i>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div></div>
+                        <div class="col text-center">
+                            <h3 class="fs-7 text-uppercase">About freelancer</h3>
+                            <p class="mb-0 fs-5">Freelance is a free to use, open source Bootstrap theme created by <a
+                                    href="#">Start Bootstrap</a></p>
                         </div>
 
                     </div>
                 </div>
             </div>
-            <div class="main-footer__copy">
-                <div class="container-fluid">
-
+            <div class="main-footer__copy py-5">
+                <div class="container-fluid text-center">
+                    <p class="mb-0">Copyright &copy; Your Website 2019</p>
                 </div>
             </div>
         </footer>
