fix main-footer__info padding top

--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 
         <!-- Footer START-->
         <footer class="main-footer text-white">
-            <div class="main-footer__info">
+            <div class="main-footer__info py-6">
                 <div class="container-lg">
-                    <div class="row row-cols-1 row-cols-lg-3 g-4 py-6">
+                    <div class="row row-cols-1 row-cols-lg-3 g-4">
                         <div class="col text-center">
                             <h3 class="fs-7 text-uppercase">Location</h3>
                             <p class="mb-0 fs-5">2215 John Daniel Drive Clark, MO 54243</p>
